better file parsing

--- a/outtemp.html.erb
+++ b/outtemp.html.erb
@@ -9,18 +9,18 @@
 <% lines.each do |line| %>
       <tr class="sentence">
         <td class="orig">
-  <% line["orig"]["en-uk"].each_with_index do |word,indx| %>
+  <% line[0]["orig"]["en-uk"].each_with_index do |word,indx| %>
           <div class="inline_unit_orig">
             <span class="orig"><%= word + "&nbsp;".html_safe %></span>
           </div>
   <% end %>
           <div class="clear_both"> </div>
-  <% line["orig"]["ipa"].each_with_index do |ipaword,indx| %>
+  <% line[0]["orig"]["ipa"].each_with_index do |ipaword,indx| %>
           <div class="inline_unit_ipa">
              <ruby class="base">
                <rb><span class="ipa"><%= ipaword + "&nbsp;".html_safe %></span></rb>
              <rt>
-     <% line["orig"]["ipasylflat"][0][indx].each do |syllable| %>
+     <% line[0]["orig"]["ipasylflat"][0][indx].each do |syllable| %>
                  <ruby><rbc><rb class="onset"><%= syllable[:onset] %></rb><ruby><rb class="nucleus"><span class="vowel"><%= syllable[:nucleus] %></span></rb><rt class="<%= syllable[:stress] %>">●</rt></ruby><rb class="coda"><%= syllable[:coda] %></rb></rbc>
                  </ruby>
      <% end %>
@@ -31,7 +31,7 @@
         </td>
         <td>
           <div class="inline_unit_translation">
-            <div class="inline_orig"><%= line["translation"]%></div>
+            <div class="inline_orig"><%= line[0]["translation"]%></div>
           </div>
           <div class="clear_both"> </div>
         </td>
